--- a/package.json
+++ b/package.json
@@ -1,34 +1,32 @@
 {
-  "name": "todo-list",
+  "name": "battleship",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "",
+  "private": true,
   "scripts": {
     "test": "jest",
+    "watch": "webpack --watch",
     "start": "webpack serve --open",
-    "build": "webpack",
-    "subinit": "git add dist && git commit -m \"Initial dist subtree commit\"",
-    "subpush": "git subtree push --prefix dist origin gh-pages"
+    "build": "webpack"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@babel/preset-env": "^7.25.4",
-    "@eslint/js": "^9.12.0",
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
     "babel-loader": "^9.1.3",
-    "classname": "^0.0.0",
-    "css-loader": "^7.1.2",
-    "date-fns": "^3.6.0",
-    "eslint": "^9.12.0",
-    "globals": "^15.11.0",
-    "html-loader": "^5.1.0",
+    "css-loader": "^6.10.0",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
-    "prettier": "3.3.3",
-    "style-loader": "^4.0.0",
-    "webpack": "^5.94.0",
+    "style-loader": "^3.3.4",
+    "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
+    "webpack-dev-server": "^4.11.1"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    }
   }
 }
